syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.datacollect";
option java_outer_classname = "DataCollectProto";
option objc_class_prefix = "DCP";

service MyService {
    rpc GetItems (ItemQuery) returns (ItemResponse) {
    }
    rpc CollectItems (ItemCollection) returns (ItemCollectionResponse) {
    }
}

message ItemQuery {
    int64 id = 1;
}
message ItemResponse {
    repeated ResponseItem items = 1;
}

message ResponseItem {
    int64 id = 1;
    string name = 2;
}

message ItemCollectionResponse{
    repeated CollectionItem items = 1;
}

message ItemCollection{
  repeated CollectionItem items = 1;
}

message CollectionItem {
    string name = 1;
}